--- a/angular-academy/src/app/app.component.html
+++ b/angular-academy/src/app/app.component.html
@@ -6,9 +6,9 @@
 </div>
 
 
-<!-- <div class="filters">
+<div class="filters">
   <div style="overflow:scroll;">
-     <mat-button-toggle-group [(ngModel)]="fontStyle" aria-label="Font Style"> ----------
+     <!-- <mat-button-toggle-group [(ngModel)]="fontStyle" aria-label="Font Style"> ---------- -->
     <mat-button-toggle-group role="group" name="category" class="mat-button-toggle-group mat-button-toggle-group-appearance-standard" aria-disabled="false">
       <mat-button-toggle class="filters-button">All</mat-button-toggle>
       <mat-button-toggle class="filters-button">Travel</mat-button-toggle>
@@ -17,6 +17,10 @@
       <mat-button-toggle class="filters-button">Vacation</mat-button-toggle>
       <mat-button-toggle class="filters-button">Other</mat-button-toggle>
     </mat-button-toggle-group>
-     <p>Chosen value is {{fontStyle}}</p> -------
+     <!-- <p>Chosen value is {{fontStyle}}</p> ------- -->
   </div>
-</div> -->
+</div>
+
+<!-- boton  -->
+
+<app-cards></app-cards>
