--- a/angular-academy/src/app/app.component.css
+++ b/angular-academy/src/app/app.component.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 .page-title{
     padding-top: 45px;
     padding-bottom: 45px;
@@ -40,7 +44,7 @@
 
 h2{
     margin: 0;
-    font-size: 6rem;
+    font-size: 5.6rem;
     line-height: 65px;
     font-weight: 700;
 }
