--- a/angular-academy/src/app/app.component.html
+++ b/angular-academy/src/app/app.component.html
@@ -23,4 +23,25 @@
 
 <!-- boton  -->
 
-<app-cards></app-cards>
+<!-- <app-cards></app-cards> -->
+
+<div style="display: flex; width: 100%;">
+
+  <mat-card *ngFor="let element of post" class="card">
+    
+    <mat-card-title>{{element.title}}</mat-card-title>
+    <mat-card-subtitle>{{element.comments}} comments</mat-card-subtitle>
+
+    <mat-card-content>
+      <p>{{element.description}}</p>
+      <p>{{element.category}}</p>
+    </mat-card-content>
+    
+    <mat-card-actions class="action">
+      <button mat-button>Edit</button>
+      <button mat-button>Delete</button>
+    </mat-card-actions>
+  
+  </mat-card>
+
+</div>
