--- a/angular-academy/src/app/app.component.html
+++ b/angular-academy/src/app/app.component.html
@@ -21,27 +21,28 @@
   </div>
 </div>
 
+
 <!-- boton  -->
 
-<!-- <app-cards></app-cards> -->
 
 <div style="display: flex; width: 100%;">
 
   <mat-card *ngFor="let element of post" class="card">
-    
+    <a href="">
     <mat-card-title>{{element.title}}</mat-card-title>
     <mat-card-subtitle>{{element.comments}} comments</mat-card-subtitle>
 
     <mat-card-content>
-      <p>{{element.description}}</p>
+      <p style="height: 4rem; overflow: hidden; text-overflow: ellipsis;">{{element.description}}</p>
       <p>{{element.category}}</p>
     </mat-card-content>
     
-    <mat-card-actions class="action">
+    <!-- <mat-card-actions class="action">
       <button mat-button>Edit</button>
       <button mat-button>Delete</button>
     </mat-card-actions>
-  
+   -->
+  </a>
   </mat-card>
 
 </div>
