--- a/angular-academy/src/app/app.component.html
+++ b/angular-academy/src/app/app.component.html
@@ -1,48 +1,1 @@
-<div class="page-title"> 
-  <div  class="title">
-    Making your Life Easier
-  </div>
-  <h2>Discovering the World</h2>
-</div>
-
-
-<div class="filters">
-  <div style="overflow:scroll;">
-     <!-- <mat-button-toggle-group [(ngModel)]="fontStyle" aria-label="Font Style"> ---------- -->
-    <mat-button-toggle-group role="group" name="category" class="mat-button-toggle-group mat-button-toggle-group-appearance-standard" aria-disabled="false">
-      <mat-button-toggle class="filters-button">All</mat-button-toggle>
-      <mat-button-toggle class="filters-button">Travel</mat-button-toggle>
-      <mat-button-toggle class="filters-button">Lifestyle</mat-button-toggle>
-      <mat-button-toggle class="filters-button">Business</mat-button-toggle>
-      <mat-button-toggle class="filters-button">Vacation</mat-button-toggle>
-      <mat-button-toggle class="filters-button">Other</mat-button-toggle>
-    </mat-button-toggle-group>
-     <!-- <p>Chosen value is {{fontStyle}}</p> ------- -->
-  </div>
-</div>
-
-
-<!-- boton  -->
-
-
-<div style="display: flex; width: 100%;">
-
-  <mat-card *ngFor="let element of post" class="card">
-    <a href="">
-    <mat-card-title>{{element.title}}</mat-card-title>
-    <mat-card-subtitle>{{element.comments}} comments</mat-card-subtitle>
-
-    <mat-card-content>
-      <p style="height: 4rem; overflow: hidden; text-overflow: ellipsis;">{{element.description}}</p>
-      <p>{{element.category}}</p>
-    </mat-card-content>
-    
-    <!-- <mat-card-actions class="action">
-      <button mat-button>Edit</button>
-      <button mat-button>Delete</button>
-    </mat-card-actions>
-   -->
-  </a>
-  </mat-card>
-
-</div>
+<router-outlet></router-outlet>
