--- a/angular-academy/src/app/home/home.component.css
+++ b/angular-academy/src/app/home/home.component.css
@@ -6,6 +6,7 @@ body{
     margin: 0;
     font-family: Source Sans Pro,sans-serif;
     /* font-size: 1.6rem; */
+    overflow: hidden;
 }
 
 ::-webkit-scrollbar {
