--- a/angular-academy/src/app/home/home.component.css
+++ b/angular-academy/src/app/home/home.component.css
@@ -30,7 +30,8 @@ a:-webkit-any-link{
     background-size: cover;
     box-shadow: inset 0 0 0 1000px rgb(0 0 0 / 20%);
     transition: all .35s ease-in-out;
-    background-image: url(https://source.unsplash.com/random);
+    /* background-image: url(https://source.unsplash.com/random); */
+    /* background-image: url({{element.bg}}); */
     border-radius: 0;
 }
 
