--- a/angular-academy/src/app/post-detail/post-detail.component.html
+++ b/angular-academy/src/app/post-detail/post-detail.component.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div *ngFor="let p of post">
-        <h3>Title: {{p.title}}</h3>
+        <img src="{{p.bg}}" alt="">
+        <h3>{{p.title}}</h3>
     </div>
     
 </body>
