--- a/angular-academy/src/app/home/home.component.css
+++ b/angular-academy/src/app/home/home.component.css
@@ -20,15 +20,15 @@ a:-webkit-any-link{
 }
 
 .card {
-    width: 50%;
+    width: 50% !important;
 
-    position: relative;
+    position: relative !important;
     height: 360px;
 
-    background-position: 50%;
-    background-size: cover;
-    box-shadow: inset 0 0 0 1000px rgb(0 0 0 / 20%);
-    transition: all .35s ease-in-out;
+    background-position: 50% !important;
+    background-size: cover !important;
+    box-shadow: inset 0 0 0 1000px rgb(0 0 0 / 20%) !important;
+    transition: all .35s ease-in-out !important;
     border-radius: 0;
 }
 
@@ -74,7 +74,7 @@ a:-webkit-any-link{
 
 .card-subtitle{
     font-style: italic;
-    font-size: 1.6rem;
+    font-size: 15px;
     padding-bottom: 10px;
     color: #fff;
     padding-right: 10px;
@@ -82,7 +82,7 @@ a:-webkit-any-link{
 
 h3{
     position: relative;
-    font-size: 40px;
+    font-size: 5rem;
     font-weight: 600;
     letter-spacing: 0;
     line-height: 42px;
