--- a/angular-academy/src/app/post-detail/post-detail.component.html
+++ b/angular-academy/src/app/post-detail/post-detail.component.html
@@ -18,7 +18,7 @@
             {{p.description}}
         </div>
 
-        <div style="width: 50%; margin: auto; padding-top: 30px;">
+        <div style="width: 50%; margin: auto; padding: 30px 0 50px 0;">
             <h3 style="font-weight: bold; font-size: 23px;">Comments</h3>
             
             <div *ngFor="let comment of p.comments" class="comm">            
@@ -27,18 +27,21 @@
                 </div>
                 <div>
                     <div style="width: 80%; margin-left: 10px;">
-                        <h3 class="author">{{comment.author}}</h3>  
-                        <p style="font-size: 20px;">{{comment.comment}}</p>
+                        <!-- <h3 class="author">{{comment.author}}</h3>   -->
+                        <h3 class="author">Susana Enriquez</h3>  
+                        <p style="font-size: 20px;">{{comment}}</p>
                     </div>
                 </div>
             </div> 
 
-            <form style="width: 100%;">
+            <form (ngSubmit)="onSubmit()" style="width: 100%; padding-top: 20px;">
                 <mat-form-field style="width: 100%;">
-                  <mat-label>Write a comment</mat-label>
-                  <textarea matInput></textarea>
+                  <mat-label style="font-size: 20px;">Write a comment</mat-label>
+                  <textarea matInput type="text" name="add" [(ngModel)]="add"></textarea>
                 </mat-form-field>
-              </form>
+                <button mat-flat-button color="primary">Add</button>
+            </form>
+              
         </div>
 
     </div>
