--- a/angular-academy/src/app/form/form.component.html
+++ b/angular-academy/src/app/form/form.component.html
@@ -38,5 +38,10 @@
         <input type="url" matInput formControlName="bg">
         <mat-icon matSuffix>link</mat-icon>
       </mat-form-field>
+
+      <div class="button-row">
+        <button mat-button>Cancel</button>
+        <button mat-raised-button color="primary" type="submit">Save</button>
+      </div>
     </div>
 </form>
