--- a/angular-academy/src/app/create/create.component.html
+++ b/angular-academy/src/app/create/create.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="_service.form" class="normal-form">
+<form [formGroup]="_service.form" class="normal-form" (submit)="onSubmit()">
     <div class="controles-container">
         <!-- <input type="hidden" formControlName="$key"> -->
 
@@ -23,25 +23,16 @@
         </mat-select>
       </mat-form-field>
 
-      <!-- <mat-form-field>
-        <mat-label>Category</mat-label>
-        <mat-select formControlName="category">
-          <mat-option></mat-option>
-          <ng-container *ngFor="let c of cate">
-              <mat-option value="{{c.id}}">{{c.value}}</mat-option>
-          </ng-container>
-        </mat-select>
-      </mat-form-field> -->
-
       <mat-form-field>
         <mat-label>URL of the image</mat-label>
         <input type="url" matInput formControlName="bg">
         <mat-icon matSuffix>link</mat-icon>
       </mat-form-field>
 
-      <div class="button-row">
-        <button mat-button>Cancel</button>
-        <button mat-raised-button color="primary" type="submit" (click)="onSubmit()">Save</button>
+      <div class="button-row" align="end">
+        <button mat-button mat-dialog-close>Cancel</button>
+        <!-- <button mat-raised-button [mat-dialog-close]="true" color="primary" type="submit" (click)="onSubmit()">Save</button> -->
+        <button mat-raised-button [mat-dialog-close]="true" color="primary" type="submit">Save</button>
       </div>
     </div>
 </form>
