--- a/angular-academy/src/app/home/home.component.css
+++ b/angular-academy/src/app/home/home.component.css
@@ -112,7 +112,7 @@ h3:before {
 
 .category{
     font-family: Roboto,Helvetica Neue,sans-serif;
-    font-size: 1.25rem;
+    font-size: 15px;
     letter-spacing: 2.5px;
     font-weight: 500;
     text-transform: uppercase;
@@ -121,8 +121,10 @@ h3:before {
 .actions{
     position: absolute;
     right: 20px;
-    bottom: 30px;
+    bottom: 15px;
     color: #fff;
+    margin: 0;
+    padding: 0;
     /* visibility: hidden; */
-    opacity: 0;
+    /* opacity: 0; */
 }
