--- a/angular-academy/src/app/home/home.component.css
+++ b/angular-academy/src/app/home/home.component.css
@@ -20,16 +20,18 @@ a:-webkit-any-link{
 }
 
 .card {
-    width: 50% !important;
-
     position: relative !important;
     height: 360px;
 
     background-position: 50% !important;
     background-size: cover !important;
     box-shadow: inset 0 0 0 1000px rgb(0 0 0 / 20%) !important;
-    transition: all .35s ease-in-out !important;
     border-radius: 0;
+}
+
+.card:hover{
+    box-shadow: inset 0 0 0 1000px rgb(0 0 0 / 40%) !important;
+    transition: all .35s ease-in-out !important;
 }
 
 .content{
@@ -75,22 +77,12 @@ a:-webkit-any-link{
 .card-subtitle{
     font-style: italic;
     font-size: 15px;
-    padding-bottom: 10px;
     color: #fff;
     padding-right: 10px;
+    margin-bottom: 0;
 }
 
-h3{
-    position: relative;
-    font-size: 5rem;
-    font-weight: 600;
-    letter-spacing: 0;
-    line-height: 42px;
-    margin-bottom: 20px;
-}
-
-
-h3:before {
+.card-title::before {
     transition: all .5s;
     content: " ";
     display: block;
@@ -108,11 +100,13 @@ h3:before {
     line-height: 22px;
     width: 75%;
     padding-bottom: 20px;
+    font-family: Source Sans Pro,sans-serif !important;
 }
 
 .category{
+    margin-top: 25px;
     font-family: Roboto,Helvetica Neue,sans-serif;
-    font-size: 15px;
+    font-size: 13px;
     letter-spacing: 2.5px;
     font-weight: 500;
     text-transform: uppercase;
@@ -120,11 +114,15 @@ h3:before {
 
 .actions{
     position: absolute;
-    right: 20px;
-    bottom: 15px;
+    right: 25px;
+    bottom: 40px;
     color: #fff;
     margin: 0;
     padding: 0;
-    /* visibility: hidden; */
+    visibility: hidden;
     /* opacity: 0; */
 }
+
+.card:hover button {
+    visibility: visible;
+  }
