--- a/angular-academy/src/app/edit/edit.component.html
+++ b/angular-academy/src/app/edit/edit.component.html
@@ -1,3 +1,7 @@
+<div style="text-align: center;">
+  <h2>Edit Post</h2>
+</div>
+
 <form [formGroup]="_service.form" class="normal-form" (submit)="onSubmit()">
     <div class="controles-container">
         <!-- <input type="hidden" formControlName="$key"> -->
