--- a/angular-academy/src/app/post-detail/post-detail.component.html
+++ b/angular-academy/src/app/post-detail/post-detail.component.html
@@ -26,7 +26,7 @@
                     <mat-icon style="font-size: 40px; width: 40px;">account_circle</mat-icon>
                 </div>
                 <div>
-                    <div style="width: 80%; margin-left: 10px;">
+                    <div style="margin-left: 10px; overflow: hidden;">
                         <!-- <h3 class="author">{{comment.author}}</h3>   -->
                         <h3 class="author">Susana Enriquez</h3>  
                         <p style="font-size: 20px;">{{comment}}</p>
